--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -65,21 +65,22 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text1"
+            android:id="@+id/messageText"
             style="@style/Auth_Text"
             android:layout_marginBottom="15sp"
-            android:text="TEXT1"
+            android:text="SignIn/SignUp"
             android:clickable="true"
             android:textColor="@android:color/white"/>
 
         <TextView
-            android:id="@+id/text2"
+            android:id="@+id/guestText"
             style="@style/Auth_Text"
-            android:text="TEXT2"
+            android:layout_height="34dp"
+            android:layout_marginTop="10sp"
             android:clickable="true"
-            android:textColor="@color/Red"
+            android:text="Continue as Guest"
 
-            />
+            android:textColor="@color/Red" />
     </LinearLayout>
 
 
