--- a/app/src/main/res/values/strings_form.xml
+++ b/app/src/main/res/values/strings_form.xml
@@ -13,6 +13,7 @@
     <string name="message_successfully">Your request has been sent!</string>
     <string name="message_empty_fields">Please fill in all fields!</string>
     <string name="message_no_image">Please select an image!</string>
+    <string name="message_invalid_street">Location not found!</string>
 
 
     <string-array name="vehicle_array">
